# docs/swagger.json
@@ -85,13 +85,10 @@
                 "summary": "get upcoming events",
                 "parameters": [
                     {
-                        "description": "input",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/usecase.UpcomingEventInput"
-                        }
+                        "type": "string",
+                        "description": "period",
+                        "name": "period",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -504,23 +501,6 @@
             "properties": {
                 "token": {
                     "type": "string"
-                }
-            }
-        },
-        "usecase.UpcomingEventInput": {
-            "type": "object",
-            "properties": {
-                "period": {
-                    "type": "string",
-                    "enum": [
-                        "today",
-                        "tomorrow",
-                        "week",
-                        "month"
-                    ]
-                },
-                "userID": {
-                    "type": "integer"
                 }
             }
         },
